# Day19_T3_2A202600782_NguyenLyMinhKy

./: .gitignore  Makefile  README.md  REPORT.md  RUBRIC.md  graphrag_lab.py  pyproject.toml  test_lab.py
artifacts/: benchmark_20.csv  benchmark_summary.csv  cost_analysis.md  evaluation_analysis.md  full_llm_indexing.md  knowledge_graph.graphml  metrics.json  run_report.md  token_usage.json  triples.csv
artifacts/llm_cache/: doc_1.json  doc_10.json  doc_11.json  doc_12.json  doc_13.json  doc_14.json  doc_15.json  doc_16.json  doc_17.json  doc_18.json  doc_19.json  doc_2.json  doc_20.json  doc_21.json  doc_22.json  doc_23.json  doc_24.json  doc_25.json  doc_26.json  doc_27.json  doc_28.json  doc_29.json  doc_3.json  doc_30.json  doc_31.json  doc_32.json  doc_33.json  doc_34.json  doc_35.json  doc_36.json  doc_37.json  doc_38.json  doc_39.json  doc_4.json  doc_40.json  doc_41.json  doc_42.json  doc_43.json  doc_44.json  doc_45.json  (+30 more)
